Better fix for album art stretching

--- a/data/interfaces/default/css/style.css
+++ b/data/interfaces/default/css/style.css
@@ -157,6 +157,14 @@ small {
 }
 img.albumArt {
   float: left;
+  min-height: 100%;
+  min-width: 100%;
+  max-width: 250px;
+  max-height: 300px;
+  position: relative;
+}
+img.albumArt-nostretch {
+  float: left;
   min-height: 64px;
   min-width: 64px;
   max-width: 250px;
